<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@drawable/bg_header_perfil"
        android:gravity="center">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="@string/bienvenido_a"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="66dp"
            android:text="@string/zaragoza_tricks"
            android:textColor="#ffffff"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:drawableTint="#3F51B5"
            android:textSize="30sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@drawable/bg_background_perfil">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="132dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:drawableTint="#3F51B5"
            android:ems="9"
            android:hint="@string/nombre"
            android:inputType="textPersonName" tools:targetApi="o"/>
    </RelativeLayout>
</LinearLayout>