<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".fragments.NIEFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/txtRequsitoNieUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="20dp"
                android:text="@string/_1_solicitar_cita_en_extranjer_a_para_obtener_resoluci_n_de_estancia"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />


            <TextView
                android:id="@+id/txtDetalleNieUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="6sp"
                android:text="@string/llevar_la_siguiente_documentaci_n_n_copia_del_visado_n_matr_cula_de_la_universidad_si_es_estudiante_n_formulario_ex15_y_el_ex17_n_cita_previa_por_internet_o_presentarse_presencial_y_hacer_turno"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRequsitoNieUno"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/txtRequsitoNieDos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:text="@string/_2_llevar_formulario_720_junto_a_la_tasa_de_impuesto"
                android:textStyle="bold" app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDetalleNieUno"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/txtRequsitoNieTres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/_3_cita_por_internet_en_la_polic_a_para_la_toma_de_huellas"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRequsitoNieDos"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:text="@string/el_d_a_de_la_cita_debe_llevar_n_copia_de_visado_n_copia_de_pasaporte_n_copia_de_la_resoluci_n_dada_en_extranjer_a_n_impuesto_y_formulario_720_n_fotograf_a_tipo_dni_con_fondo_blanco_n_certificado_de_empadronamiento"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRequsitoNieTres"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1">


                <Button
                    android:id="@+id/btn1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@color/trans"
                    android:drawableStart="@drawable/formex15"
                    android:text="@string/formulario_ex17"
                    android:drawablePadding="10dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:background="@color/trans"
                    android:drawableStart="@drawable/formex17"
                    android:text="@string/formulario_ex15"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_weight="1"
                    android:background="@color/trans"
                    android:drawableStart="@drawable/hacercita"
                    android:text="@string/hacer_cita"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    android:drawablePadding="10dp"
                    android:textStyle="bold" />




            </LinearLayout>

        </android.support.constraint.ConstraintLayout>


    </ScrollView>



</android.support.constraint.ConstraintLayout>